Fixed alignment in drink-details component

--- a/src/app/drink-details/drink-details.component.scss
+++ b/src/app/drink-details/drink-details.component.scss
@@ -6,13 +6,16 @@ width: 1000px;
 margin: 0 auto; 
 }
 
-.title-group, .ingredients-group, .instructions-group, .card-header {
+.type-group, .ingredients-group, .instructions-group, .card-header {
     display: flex;
     flex-direction: row;
+}
+
+.type-group, .instructions-group  {
     align-items: baseline; 
 }
 
-.title-group h4, .ingredients-group h4, .instructions-group h4 {
+.type-group h4, .ingredients-group h4, .instructions-group h4 {
     width: 100px;
     margin: 30px; 
     text-align: left;
@@ -20,8 +23,7 @@ margin: 0 auto;
 }
 
 .card-name{
-    width: 100px;
-    margin: 10px 0px 30px 30px; 
+    margin: 10px 30px 30px 30px; 
     text-align: left;  
 }
 
